# memorycapsule

./: .clang-format  CMakeLists.txt  all.txt  clang_tidy_report.txt  plan.txt  prompt.txt  runclang-tidy.sh
Base/CppOrm/: CMakeLists.txt
Base/CppOrm/Example/: CMakeLists.txt  main_cpporm_mysql_example.cpp  user_model.h
Base/CppOrm/Include/cpporm/: db_manager.h  error.h  i_query_executor.h  model.h  model_base.h  model_base_class.h  model_crtp_base.h  model_definition_macros.h  model_meta.h  model_meta_definitions.h  model_registry.h  model_types.h  qt_db_manager.h  query_builder.h  query_builder_core.h  query_builder_execution.h  query_builder_fwd.h  query_builder_setters.h  query_builder_sql_generation.h  session.h  session_batch_ops.h  session_core.h  session_crud_ops.h  session_fwd.h  session_migrate_priv.h  session_priv_batch_helpers.h  session_priv_batch_helpers_fwd.h  session_types.h
Base/CppOrm/Source/: db_manager.cpp  model_base.cpp  qt_db_manager.cpp  session_batch_execution_and_hooks.cpp  session_batch_id_backfillers.cpp  session_batch_sql_preparation.cpp  session_builder_factories.cpp  session_create_batch_ops.cpp  session_create_single_op.cpp  session_delete_ops.cpp  session_lifecycle.cpp  session_mapping_utils.cpp  session_migrate_column_ops.cpp  session_migrate_index_ops.cpp  session_migrate_ops.cpp  session_migrate_table_ops.cpp  session_migrate_utils.cpp  session_preload_utils.cpp  session_raw_ops.cpp  session_read_ops.cpp  session_save_op.cpp  session_static_utils.cpp  session_transaction.cpp  session_update_ops.cpp
Base/CppOrm/Source/builder_parts/: query_builder_conditions_qb_overloads.cpp  query_builder_core.cpp  query_builder_cte_select_subquery.cpp  query_builder_execution_non_template.cpp  query_builder_helpers.cpp  query_builder_lifecycle.cpp  query_builder_model_table_from.cpp  query_builder_onconflict.cpp  query_builder_setters_core.cpp  query_builder_sql_delete.cpp  query_builder_sql_insert.cpp  query_builder_sql_select.cpp  query_builder_sql_update.cpp  query_builder_state.cpp  query_builder_utils.cpp
Base/DataBaseDriver/Neo4jBoltDriver/: CMakeLists.txt
Base/DataBaseDriver/Neo4jBoltDriver/Source/: bolt_connection.cpp  bolt_protocol.cpp  error.cpp  i_socket_adaptor.cpp
Base/DataBaseDriver/Neo4jDriver/: CMakeLists.txt
Base/DataBaseDriver/SqlDriver/: CMakeLists.txt
Base/DataBaseDriver/SqlDriver/Source/: dummy.cpp  sql_connection_parameters.cpp  sql_database.cpp  sql_database_connection.cpp  sql_database_lifecycle.cpp  sql_database_metadata_features.cpp  sql_database_properties.cpp  sql_database_transaction.cpp  sql_driver_manager.cpp  sql_error.cpp  sql_field.cpp  sql_index.cpp  sql_query.cpp  sql_record.cpp  sql_value_any_interop.cpp  sql_value_chrono_constructors.cpp  sql_value_core.cpp  sql_value_lob_constructors.cpp  sql_value_qt_constructors.cpp  sql_value_qvariant_interop.cpp  sql_value_tobytes.cpp  sql_value_tochrono.cpp  sql_value_todatetime.cpp  sql_value_tolob.cpp  sql_value_tonumeric.cpp  sql_value_tostring.cpp
Base/Protocol/BoltProtocol/: CMakeLists.txt  spec.txt
Base/Protocol/BoltProtocol/Document/: 01-introduction.md  02-core-concepts.md  03-handshake-and-chunking.md  04-message-serialization.md  05-message-deserialization.md  06-structure-types-and-conversions.md  07-error-handling.md  08-versioning.md
Base/Protocol/BoltProtocol/Example/: CMakeLists.txt  client_example.cpp  client_example_main.cpp  client_example_session.cpp  client_example_session.h  client_example_transaction.cpp  client_example_transaction.h  client_example_tx_begin.cpp  client_example_tx_begin.h  client_example_tx_commit.cpp  client_example_tx_commit.h  client_example_tx_pull.cpp  client_example_tx_pull.h  client_example_tx_run.cpp  client_example_tx_run.h  client_example_utils.cpp  client_example_utils.h  server_example.cpp  server_example_handlers.cpp  server_example_handlers.h  server_example_main.cpp  server_example_utils.cpp  server_example_utils.h
Base/Protocol/BoltProtocol/Source/: bolt_errors_versions.cpp  bolt_structure_node.cpp  bolt_structure_path.cpp  bolt_structure_relationship.cpp  bolt_structure_spatial.cpp  bolt_structure_temporal_date.cpp  bolt_structure_temporal_datetime.cpp  bolt_structure_temporal_duration.cpp  bolt_structure_temporal_time.cpp  chunking.cpp  handshake.cpp  message_defs.cpp  message_serialization_client.cpp  message_serialization_client_query.cpp  message_serialization_client_routing.cpp  message_serialization_client_session.cpp  message_serialization_client_telemetry.cpp  message_serialization_client_transaction.cpp  message_serialization_server.cpp  message_serialization_server_common.cpp  message_serialization_server_control.cpp  message_serialization_server_request_control.cpp  message_serialization_server_request_query.cpp  message_serialization_server_request_routing.cpp  message_serialization_server_request_session.cpp  message_serialization_server_request_transaction.cpp  message_serialization_server_requests.cpp  message_serialization_server_responses.cpp  packstream_reader.cpp  packstream_reader_collection_types.cpp  packstream_reader_simple_types.cpp  packstream_reader_string.cpp  packstream_reader_structure.cpp  packstream_reader_types.cpp  packstream_writer.cpp  packstream_writer_collection_types.cpp  packstream_writer_simple_types.cpp  packstream_writer_string.cpp  packstream_writer_structure.cpp  packstream_writer_types.cpp
Base/Protocol/MysqlProtocol/: CMakeLists.txt
Base/Protocol/MysqlProtocol/Source/: mysql_bind_setup_null.cpp  mysql_bind_setup_numeric.cpp  mysql_bind_setup_string_blob_time.cpp  mysql_error_reporting.cpp  mysql_native_value_from_bind.cpp  mysql_native_value_from_row.cpp  mysql_native_value_utils.cpp  mysql_time_chrono_conversion.cpp  mysql_time_conversion.cpp
Base/Transport/MySqlTransport/: CMakeLists.txt
Base/Transport/MySqlTransport/Source/: mysql_transport_charset_handler.cpp  mysql_transport_column_lister.cpp  mysql_transport_connection.cpp  mysql_transport_connection_charset.cpp  mysql_transport_connection_core.cpp  (+26 more)
Base/Transport/Neo4jBoltTransport/: CMakeLists.txt
(+194 files in other folders)
